48
================

26/10/23 Add <<LocationSite>> wordkey
26/10/23 Verify that imagedata received is a valid image before doing anything
24/10/23 Fix template_valid bug that stopped reminder emails being sent #1322
23/10/23 Automated emails for due payments #1338
22/10/23 Querybuilder: output names instead of IDs on additional animal/person links
22/10/23 Show error for corrupted or incompatible files when attaching media
20/10/23 Fix bug creating reserves from online forms
20/10/23 Applying templates to baby animals, do not adjust overdue to today
17/10/23 Online forms: attach animal attaches to bonded animals too
17/10/23 Redirect to animal media instead of person media after movement doc
16/10/23 Online forms: Use pattern match for shelter/adoptable animal params
16/10/23 When creating reserves from form, reserve to all bonded animals
16/10/23 Similar check: add space to house number to stop 5 matching 50 etc
16/10/23 Add a document button/type to medical tab/book #1336
15/10/23 PetRescue: Show error responses in publishing history slider
13/10/23 Handle decimal commas in PayPal activity CSV files
13/10/23 Bug fix for multiple mergeperson values in an incoming form
12/10/23 Force daily obs animal links to open in a new tab #489
12/10/23 Make SAC configuration available to Canadian shelters
11/10/23 Fix handling of autocomplete in email addresses #1337
09/10/23 Include couple email from activemovement in animal email dropdown
04/10/23 Online forms: Number field type (validation only) #969
04/10/23 Option to default to all on find incident #1334
04/10/23 PetRescue: Option to only send coordinator's email address
04/10/23 Bug fix for documents where flags is null #1329
02/10/23 Manual code check for new animals, make case insensitive
02/10/23 Fix bug with display of short codes on Home/Shelterview
02/10/23 lksize should still be non-editable for English speakers
02/10/23 Option to make not for adoption with more than X active reserves #1335