@@ -1,6 +1,7 @@
 48
 ================
 
+27/10/23 person_new: When similar checking, don't require firstname for phone/email
 26/10/23 Add <<LocationSite>> wordkey
 26/10/23 Verify that imagedata received is a valid image before doing anything
 24/10/23 Fix template_valid bug that stopped reminder emails being sent #1322
